--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,8 @@ src/AspNetCore/version.h
 src/RequestHandler/version.h
 src/CommonLib/aspnetcore_msg.h
 src/CommonLib/aspnetcore_msg.rc
+test/AspNetCoreModuleTests/Debug
+test/AspNetCoreModuleTests/Release
 .build
 
 *.VC.*db
