--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,6 +1,8 @@
 <Project>
   <Import Project="..\Directory.Build.props" />
-
+  <PropertyGroup>
+    <DefineConstants Condition="'$(InnerLoop)' != ''">$(DefineConstants);INNER_LOOP</DefineConstants>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Internal.AspNetCore.Sdk" PrivateAssets="All" Version="$(InternalAspNetCoreSdkPackageVersion)" />
   </ItemGroup>
