--- a/test/Kestrel.Core.Tests/Kestrel.Core.Tests.csproj
+++ b/test/Kestrel.Core.Tests/Kestrel.Core.Tests.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="$(MicrosoftAspNetCoreHttpPackageVersion)" />
     <PackageReference Include="System.Memory" Version="$(SystemMemoryPackageVersion)" />
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="$(SystemRuntimeCompilerServicesUnsafePackageVersion)" />
+    <PackageReference Include="Microsoft.Extensions.Buffers.Testing.Sources" Version="$(MicrosoftExtensionsBuffersSourcesTestingPackageVersion)" />
   </ItemGroup>
 
 </Project>
