--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -2,4 +2,5 @@
   <Import Project="..\version.props" />
   <Import Project="..\build\common.props" />
   <Import Project="..\build\external-dependencies.props" />
+  <Import Project="..\build\sources.props" />
 </Project>
