--- a/samples/SystemdTestApp/SystemdTestApp.csproj
+++ b/samples/SystemdTestApp/SystemdTestApp.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Kestrel\Kestrel.csproj" />
+    <ProjectReference Include="..\..\src\Kestrel.Transport.Libuv\Kestrel.Transport.Libuv.csproj" />
   </ItemGroup>
 
   <ItemGroup>
