Reduce build steps in our pipelines - `msbuild` now enforces the ordering as needed for tests   - see below - do not build Java projects in any quarantined tests - ensure App.Runtime and App.Ref packages are built before creating Helix correlation payload - reduce the number of App.Ref / App.Runtime references in most builds   - add new `$(IsFrameworkBuilding)` property; base value on `@(ProjectToBuild)` items   - add `$(ImportedCommonProps)` to avoid `<Import/>` repetition in GenerateFiles.csproj - always pack App.Ref and App.Runtime for consistency though required only in some cases   - avoid need to reference both projects when packages are needed - `Publish` test projects before creating SharedFx.Layout.zip; tests may build App.Ref and App.Runtime
nits:
- be explicit and use `-arch x64` in affected build steps
- add a few more comments about targeting pack to Versions.props
- modernize documentation in the project template README
  - account for project builds creating the shared Fx
- ignore shared Fx .nupkg that may be out-of-date
- remove `$(HelixTestConfigurationFilePath)` and related `@(HelixCorrelationPayload)` setting
  - Helix SDK does these

--- a/eng/Build.props
+++ b/eng/Build.props
@@ -1,5 +1,5 @@
 <Project>
-  <Import Project="Common.props" />
+  <Import Project="Common.props" Condition=" '$(ImportedCommonProps)' != 'true' " />
 
   <!-- These projects are always excluded, even when -projects is specified on command line. -->
   <ItemGroup>
@@ -144,7 +144,6 @@
         -->
         <DotNetProjects Include="
                           $(RepoRoot)src\Framework\App.Ref\src\Microsoft.AspNetCore.App.Ref.csproj;
-                          $(RepoRoot)src\Framework\App.Runtime\src\Microsoft.AspNetCore.App.Runtime.csproj;
                           $(RepoRoot)src\Framework\App.Ref.Internal\src\Microsoft.AspNetCore.App.Ref.Internal.csproj;
                           $(RepoRoot)src\Framework\test\Microsoft.AspNetCore.App.UnitTests.csproj;
                           $(RepoRoot)src\Caching\**\*.*proj;
