--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -680,14 +680,10 @@ stages:
         agentOs: Windows
         timeoutInMinutes: 240
         steps:
-        # Build the shared framework
-        - script: ./eng/build.cmd -ci -nobl -all -pack -arch x64
-                  /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log $(_InternalRuntimeDownloadArgs)
-          displayName: Build shared fx
-        - script: ./eng/build.cmd -ci -nobl -noBuildRepoTasks -noRestore -test -all -noBuildNative
+        - script: ./eng/build.cmd -ci -nobl -test -pack -arch x64 -all
                   -projects eng\helix\helix.proj /p:IsHelixPRCheck=true /p:IsHelixJob=true
                   /p:CrossgenOutput=false /p:ASPNETCORE_TEST_LOG_DIR=artifacts/log $(_InternalRuntimeDownloadArgs)
-          displayName: Run build.cmd helix target
+          displayName: Build and run Helix tests
           env:
             HelixApiAccessToken: $(HelixApiAccessToken) # Needed for internal queues
             SYSTEM_ACCESSTOKEN: $(System.AccessToken) # We need to set this env var to publish helix results to Azure Dev Ops
