!nits! Build cleanup (#38979)
- condense `$(_UseHelixOpenQueues)` YAML
- restore ability to override `$(IsUnitTestProject)`
- treat `$(IsUnitTestProject)` and `$(IsTestProject)` as `bool` after Arcade SDK.props imported
- avoid attempts to override `$(RunQuarantinedTests)`; it's set globally
- remove unnecessary `$(IsUnitTestProject)` and `$(IsTestProject)` settings
  - override `$(IsUnitTestProject)` (not `$(IsTestProject)`) _before_ root Directory.Build.props

--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -46,6 +46,8 @@ variables:
   value: .NETCORE
 - name: PostBuildSign
   value: true
+- name: _UseHelixOpenQueues
+  value: ${{ ne(variables['System.TeamProject'], 'internal') }}
 - ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest')) }}:
   - name: _BuildArgs
     value: /p:TeamName=$(_TeamName)
@@ -103,8 +105,6 @@ variables:
   - name: WindowsArm64InstallersLogArgs
     value: /bl:artifacts/log/Release/Build.Installers.Arm64.binlog
 - ${{ if ne(variables['System.TeamProject'], 'internal') }}:
-  - name: _UseHelixOpenQueues
-    value: 'true'
   - name: _SignType
     value: ''
   - name: _InternalRuntimeDownloadArgs
@@ -124,8 +124,6 @@ variables:
            /p:DotNetRuntimeSourceFeed=https://dotnetclimsrc.blob.core.windows.net/dotnet
            /p:DotNetRuntimeSourceFeedKey=$(dotnetclimsrc-read-sas-token-base64)
   - group: DotNet-HelixApi-Access
-  - name: _UseHelixOpenQueues
-    value: 'false'
   - ${{ if notin(variables['Build.Reason'], 'PullRequest') }}:
     - name: _SignType
       value: real
